--- a/style/grid.css
+++ b/style/grid.css
@@ -9,3 +9,19 @@
     "profile content"
     "footer footer";
 }
+
+.header {
+    grid-area: header;
+}
+
+.profile {
+    grid-area: profile;
+}
+
+.content {
+    grid-area: content;
+}
+
+.footer {
+    grid-area: footer;
+}
