--- a/style/grid.css
+++ b/style/grid.css
@@ -2,8 +2,8 @@
     height: 100vh;
     width: 100vw;
     display: grid;
-    grid-template-rows: 20vw 80vw;
-    grid-template-columns: 10vh 50vh 40vh;
+    grid-template-columns: 20vw 80vw;
+    grid-template-rows: 10vh 50vh 40vh;
     grid-template-areas: 
     "header header"
     "profile content"
@@ -12,16 +12,20 @@
 
 .header {
     grid-area: header;
+    background: red;
 }
 
 .profile {
     grid-area: profile;
+    background: green;
 }
 
 .content {
     grid-area: content;
+    background: yellow;
 }
 
 .footer {
     grid-area: footer;
+    background: blue;
 }
