--- a/style/login.css
+++ b/style/login.css
@@ -66,12 +66,11 @@
     position: relative;
     margin-top: 15px;
     margin-bottom: 10px;
-    left: 1.2vw;
+    left: 1vw;
     top: 2.5vh;
     border-radius: 30px;
     width: 12vw;
     height: 4vh;
     font-size: 1.1em;
     text-align: center;
-
-}
+};
